--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.536.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
